--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "OK Colf App",
+  "name": "OK Colf Express",
   "short_name": "OKColf",
   "start_url": "/index.html",
   "display": "standalone",
