--- a/manifest.json
+++ b/manifest.json
@@ -1,14 +1,34 @@
 {
-  "name": "Workers PWA",
-  "short_name": "Workers",
-  "start_url": "/index.html",
-  "display": "standalone",
-  "background_color": "#ffffff",
-  "theme_color": "#2b3e50",
-  "icons": [
-    { "src": "/icons/android-chrome-192x192.png", "sizes": "192x192", "type": "image/png" },
-    { "src": "/icons/android-chrome-512x512.png", "sizes": "512x512", "type": "image/png" },
-    { "src": "/icons/apple-touch-icon-180x180.png", "sizes": "180x180", "type": "image/png" },
-    { "src": "/icons/maskable_icon.png", "sizes": "512x512", "type": "image/png", "purpose": "maskable" }
-  ]
+    "name": "OK Colf Express",
+    "short_name": "OK Colf Express",
+    "start_url": "/index.html",
+    "display": "standalone",
+    "background_color": "#ffffff",
+    "theme_color": "#2b3e50",
+    "icons": [
+        {
+            "src": "/icons/maskable_icon_x192.png",
+            "sizes": "192x192",
+            "type": "image/png",
+            "purpose": "maskable"
+        },
+        {
+            "src": "/icons/maskable_icon_x512.png",
+            "sizes": "512x512",
+            "type": "image/png",
+            "purpose": "maskable"
+        },
+        {
+            "src": "/icons/apple-touch-icon.png",
+            "sizes": "180x180",
+            "type": "image/png",
+            "purpose": "maskable"
+        },
+        {
+            "src": "/icons/maskable_icon_x512.png",
+            "sizes": "512x512",
+            "type": "image/png",
+            "purpose": "maskable"
+        }
+    ]
 }
