--- a/manifest.json
+++ b/manifest.json
@@ -1,31 +1,31 @@
 {
     "name": "OK Colf Express",
     "short_name": "OK Colf Express",
-    "start_url": "/index.html",
+    "start_url": "index.html",
     "display": "standalone",
     "background_color": "#ffffff",
     "theme_color": "#2b3e50",
     "icons": [
         {
-            "src": "/assets/maskable_icon_x192.png",
+            "src": "assets/maskable_icon_x192.png",
             "sizes": "192x192",
             "type": "image/png",
             "purpose": "maskable"
         },
         {
-            "src": "/assets/maskable_icon_x512.png",
+            "src": "assets/maskable_icon_x512.png",
             "sizes": "512x512",
             "type": "image/png",
             "purpose": "maskable"
         },
         {
-            "src": "/assets/apple-touch-icon.png",
+            "src": "assets/apple-touch-icon.png",
             "sizes": "180x180",
             "type": "image/png",
             "purpose": "maskable"
         },
         {
-            "src": "/assets/maskable_icon_x512.png",
+            "src": "assets/maskable_icon_x512.png",
             "sizes": "512x512",
             "type": "image/png",
             "purpose": "maskable"
