--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
     "debug.javascript.defaultRuntimeExecutable": {
         "pwa-node": "node"
-    }
+    },
+    "liveServer.settings.port": 5501
 }
